# cmake-learning

./: LICENSE.txt  README.md
cs-project-simple/: .gitignore  README.md
cs-project-simple/src/: main.cs
cs-project-with-cppdll/: README.md
cs-project-with-cppdll/src/: CMakeLists.txt
cs-project-with-cppdll/src/DllCaller/: CMakeLists.txt  main.cs
cs-project-with-cppdll/src/HelloWorldDll/: CMakeLists.txt  helloworld.cpp  helloworld.h
simple-cs-project/src/: CMakeLists.txt
